# cloudRegistration

./: CMakeLists.txt
data/pointcloud/: airplane_mod.txt  cloud2.ply
data/pointresult/: airplane_clip.txt  frame-000.txt  result1.txt
data/rmse/: fpfh_rmse.txt  our_rmse.txt  shot_rmse.txt  time.txt  toldi_rmse.txt
data/testdata_3dmatch/sun_3d_mit_lab/: cloud_bin_0.ply  cloud_bin_1.ply  cloud_bin_10.ply  cloud_bin_12.ply  cloud_bin_23.ply  cloud_bin_24.ply  cloud_bin_25.ply  cloud_bin_26.ply  cloud_bin_27.ply  cloud_bin_28.ply  cloud_bin_4.ply  cloud_bin_9.ply
include/: 3DHoPD.h  LRFDsecriptorExtractor.h  TOLDI.h  clippingAndFilter.h  matchByFPFH.h  matchBySHOT.h  pointTools.h  pointTransform.h  registrateByICP.h
src/: LRFDEscriptorExtractor.cpp  TOLDI_LRF.cpp  TOLDI_descriptor.cpp  clippingAndFilter.cpp  matchBy3DHoPD.cpp  matchByFPFH.cpp  matchBySHOT.cpp  matchByTOLDI.cpp  pointTools.cpp  pointTransform.cpp  registrateByICP.cpp  test.cpp  test1.cpp  test2.cpp
